<resources>
    <string name="app_name">WallpaperAndroid</string>
    <string name="app_title">Go with your vibe!</string>
    <string name="tag_line">Are you looking for WallPapers?</string>
    <string name="feature_list">Explore</string>
    <string name="home">Home</string>
    <string name="collection_list">Collections</string>
    <string name="collection_title">Collections!</string>
    <string name="fav_list">Favourites</string>
    <string name="hello">"Hello "</string>
    <string name="filter">Filter</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>

    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="lock_screen">LockScreen</string>
    <string name="single">single</string>
    <string name="no_fav">There are no favourite images yet</string>
    <string name="lock_and_home">Both</string>
    <string name="size_error">The screen size is smaller than actual image, you need to crop image more</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="set_lockscreen">Set as LockScreen</string>
    <string name="both">Both</string>
    <string name="search">Search here</string>
    <string name="search_for">Search results for </string>
    <string name="favourite_title">Favourites!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WALLPAPER APP</string>
    <string name="nav_header_subtitle">"No funky slogan here, just a wallpaper app"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_explore">EXPLORE</string>
    <string name="menu_feature">FEATURE COLLECTION</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_rate">RATE US</string>
    <string name="menu_help">HELP &amp; FAQ</string>
    <string name="feat_collect">Featured Collection</string>
    <string name="help">Faq</string>
    <string name="choose_email">Select email app</string>
    <string name="menu_dark_theme">CHANGE THEME</string>

</resources>
